add short description to IcyPlugin annotation, add it to ApplicationMenuPlugins class